--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ p {
   color: red;
 }
 
-.form-column {
+.filter-brands,
+.filter-price {
   margin: 48px 15px 0 15px;
+}
+
+.filter-price input {
+  width: 100%;
 }
